--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <maven-compiler-version>3.8.1</maven-compiler-version>
 
-    <jackson.version>2.16.0</jackson.version>
+    <jackson.version>2.17.0</jackson.version>
 
     <junit-bom.version>5.9.2</junit-bom.version>
     <modelmapper.version>3.1.1</modelmapper.version>
@@ -78,18 +78,19 @@
       <version>${jackson.version}</version>
     </dependency>
 
-    <!-- Jackson Datatype JAXRS -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jaxrs</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
-
     <!-- Jackson Datatype Hibernate5 -->
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-hibernate5</artifactId>
       <version>${jackson.version}</version>
+    </dependency>
+
+    <!-- Jackson Datatype JSR 310 -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
+      <scope>compile</scope>
     </dependency>
 
     <!-- Model Mapper -->
